# Lib_OOT_E3TRadio2

./: CMakeLists.txt  Leeme.txt  Leeme_instalacion  Leeme_prerrequistos  MANIFEST.md
buid/: cmake_install.cmake  install_manifest.txt
docs/: README.E3TRadio
examples/: FFT_bases_cuasiortogonales.grc  FFT_bases_cuasiortogonales_v2.grc  IFFT_bases_cuasiortogonales_v2.grc  VectorAverage.fft_jesus.Zero_order_hold.grc  decisor_entero.grc  delay_hob.grc  (+11 more)
grc/: BackUp_E3TRadio_acumulador_truncado_ff.xml  BackUp_E3TRadio_ifft_jesus.xml  CMakeLists.txt  E3TRadio_Averager_onate.xml  E3TRadio_Averager_onate.xml~  E3TRadio_FFT_SDRCol_triangular.xml  E3TRadio_Zero_Order_Hold.xml~  E3TRadio_acumulador_truncado_ff.xml  E3TRadio_acumulador_truncado_ff.xml~  E3TRadio_amplificador_ff.xml  E3TRadio_amplificador_ff.xml~  E3TRadio_averager.xml  E3TRadio_averager.xml~  E3TRadio_decisor_fb.xml  E3TRadio_decisor_ff.xml~  E3TRadio_decisor_fi.xml  E3TRadio_decisor_fi.xml~  E3TRadio_delay_hob_ff.xml  E3TRadio_delay_hob_ff.xml~  E3TRadio_diezma_ff.xml  E3TRadio_diezma_ff.xml~  E3TRadio_diezmador_cc.xml~  E3TRadio_diezmaoppenhein.xml~  E3TRadio_diezmaoppenhein_cc.xml~  E3TRadio_diezmoppenh2_ff.xml~  E3TRadio_diezmoppenh3_ff.xml  E3TRadio_diezmoppenh3_ff.xml~  E3TRadio_diezmoppenhein1_ff.xml~  E3TRadio_e_BERtool.xml  E3TRadio_e_canal_BER.xml  E3TRadio_ej_amplificador_ff.xml  E3TRadio_fft_jesus.xml  E3TRadio_fft_jesus.xml~  E3TRadio_ifft_jesus.xml  E3TRadio_max_xx.xml  E3TRadio_max_xx.xml~  E3TRadio_mean_meter.xml  E3TRadio_ojo1_f.xml~  E3TRadio_power_meter.xml  E3TRadio_retrazo_cc.xml  (+26 more)
grc/BackUps/: BackUp_E3TRadio_fft_jesus.xml  BackUp_E3TRadio_time_averager_jesus.xml  BackUp_RadioGIS_fft.xml  BackUp_RadioGIS_time_averager.xml  Backup.E3TRadio_Zero_Order_Hold.xml  Backup_E3TRadio_Averager_onate.xml  BorrarE3TRadio_vector_averager_hob.xml  Borrar_E3TRadio_FFT_SDRCol_triangular.xml
(+260 files in other folders)
