# Copyright 2011 Free Software Foundation, Inc.
#
# This file is part of GNU Radio
#
# GNU Radio is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
#
# GNU Radio is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with GNU Radio; see the file COPYING.  If not, write to
# the Free Software Foundation, Inc., 51 Franklin Street,
# Boston, MA 02110-1301, USA.
install(FILES
    E3TRadio_sumador.xml
    E3TRadio_sum_vectors_ff.xml
    E3TRadio_amplificador_ff.xml
    E3TRadio_max_xx.xml
    E3TRadio_diezmador_cc.xml
    E3TRadio_Zero_Order_Hold.xml
    E3TRadio_unipolar_to_bipolar_ff.xml
    E3TRadio_FFT_SDRCol_triangular.xml
    E3TRadio_Averager_onate.xml
    E3TRadio_time_averager_jesus.xml
    E3TRadio_fft_jesus.xml
    E3TRadio_averager.xml
    E3TRadio_vector_average_hob.xml
    E3TRadio_ej_amplificador_ff.xml
    E3TRadio_acumulador_truncado_ff.xml
    E3TRadio_decisor_ff.xml
    E3TRadio_decisor_fb.xml
    E3TRadio_decisor_fi.xml
    E3TRadio_delay_hob_ff.xml
    E3TRadio_v_delay.xml
    E3TRadio_diezmoppenh3_ff.xml
    E3TRadio_diezma_ff.xml
    E3TRadio_usrp2usrp1_cc.xml
    E3TRadio_zero_order_hold2_cc.xml
    E3TRadio_zero_order_hold_bb.xml
    E3TRadio_ifft_jesus.xml
    E3TRadio_retrazo_ff.xml
    E3TRadio_retrazo_cc.xml
    E3TRadio_e_canal_BER.xml
    E3TRadio_e_BERtool.xml DESTINATION share/gnuradio/grc/blocks
)
